RESOLVED FIXED158171
REGRESSION (r190574): Swipe snapshots are always black on iPhone 5
https://bugs.webkit.org/show_bug.cgi?id=158171
Summary REGRESSION (r190574): Swipe snapshots are always black on iPhone 5
Tim Horton
Reported 2016-05-27 16:00:26 PDT
REGRESSION (r190574): Swipe snapshots are always black on iPhone 5
Attachments
Patch (9.20 KB, patch)
2016-05-27 16:02 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2016-05-27 16:02:20 PDT
WebKit Commit Bot
Comment 2 2016-05-27 18:21:38 PDT
Comment on attachment 280006 [details] Patch Clearing flags on attachment: 280006 Committed r201478: <http://trac.webkit.org/changeset/201478>
WebKit Commit Bot
Comment 3 2016-05-27 18:21:42 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 4 2016-05-31 15:02:29 PDT
This may be a 2% PLT regression on Mac (still confirming). Although the title mentions iPhone, is there a chance this impacts Mac as well?
Tim Horton
Comment 5 2016-05-31 15:21:27 PDT
(In reply to comment #4) > This may be a 2% PLT regression on Mac (still confirming). Although the > title mentions iPhone, is there a chance this impacts Mac as well? It should not, and if it does it's just a mistake in the refactoring, not actually from the functionality change.
Note You need to log in before you can comment on or make changes to this bug.